fix : text align

--- a/Components/Card/card.css
+++ b/Components/Card/card.css
@@ -130,7 +130,7 @@
 }
 
 .hor-img > p {
-  text-align: center;
+  text-align: left;
   margin-bottom: 1rem;
 }
 
